kube/alrest/markdownlang-telemetryd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: markdownlang-telemetryd
  annotations:
    operator.1password.io/auto-restart: "true"
    keel.sh/policy: all
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@hourly"
  labels:
    app.kubernetes.io/name: markdownlang-telemetryd
    app.kubernetes.io/part-of: markdownlang
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: markdownlang-telemetryd
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: markdownlang-telemetryd
        app.kubernetes.io/part-of: markdownlang
    spec:
      containers:
        - name: markdownlang-telemetryd
          image: ghcr.io/xe/x/markdownlang-telemetryd:latest
          imagePullPolicy: "Always"
          ports:
            - containerPort: 9100
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: "500m"
              memory: "256Mi"
            requests:
              cpu: "100m"
              memory: "128Mi"
          securityContext:
            runAsUser: 65532
            runAsGroup: 65532
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
            readOnlyRootFilesystem: true
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
