kube/alrest/markdownlang-telemetryd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: markdownlang-telemetryd
  labels:
    app.kubernetes.io/name: markdownlang-telemetryd
    app.kubernetes.io/part-of: markdownlang
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: markdownlang-telemetryd
